--- a/scripts/watermark.js/package.json
+++ b/scripts/watermark.js/package.json
@@ -15,6 +15,10 @@
   ],
   "author": "Sherry",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sherryer/watermark.js/tree/master/scripts/watermark.js"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
