--- a/scripts/blind-watermark/package.json
+++ b/scripts/blind-watermark/package.json
@@ -1,10 +1,10 @@
 {
   "name": "blind-watermark",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "img blind watermark by frontend",
   "main": "lib/index.js",
   "scripts": {
-    "build": "gulp --gulpfile ./scripts/gulpfile.js ",
+    "build": "rollup -c",
     "upgrade": "npm run build && node ./scripts/version-update.js && npm publish"
   },
   "keywords": [
@@ -24,12 +24,17 @@
     "url": "https://github.com/Sherryer/blind-watermark/tree/master/scripts/blind-watermark"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/core": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify-es": "^2.0.0"
+    "gulp-uglify-es": "^2.0.0",
+    "rollup": "^2.47.0",
+    "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
     "discrete-wavelets": "^5.0.7",
