<update> 在 worker 中注入水印

--- a/scripts/blind-watermark/.babelrc.json
+++ b/scripts/blind-watermark/.babelrc.json
@@ -1,5 +1,6 @@
 {
   "presets": [
     ["@babel/env", {"modules": false}]
-  ]
+  ],
+  "plugins": ["@babel/plugin-proposal-async-generator-functions"]
 }
