--- a/scripts/blind-watermark/package.json
+++ b/scripts/blind-watermark/package.json
@@ -1,17 +1,19 @@
 {
   "name": "blind-watermark",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "img blind watermark by frontend",
   "main": "lib/index.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "webpack",
+    "start": "NODE_ENV=development webpack --watch",
     "upgrade": "npm run build && node ./scripts/version-update.js && npm publish"
   },
   "keywords": [
     "img",
     "blind",
     "wartmark",
-    "discrete wavelet"
+    "discrete wavelet",
+    "Worker"
   ],
   "files": [
     "src",
@@ -24,17 +26,17 @@
     "url": "https://github.com/Sherryer/blind-watermark/tree/master/scripts/blind-watermark"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.2",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-proposal-async-generator-functions": "^7.14.2",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-private-methods": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.14.2",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-uglify-es": "^2.0.0",
-    "rollup": "^2.47.0",
-    "rollup-plugin-uglify": "^6.0.4"
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "worker-loader": "^3.0.8"
   },
   "dependencies": {
     "discrete-wavelets": "^5.0.7",
