--- a/scripts/blind-watermark/package.json
+++ b/scripts/blind-watermark/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blind-watermark",
-  "version": "0.1.7",
+  "version": "1.0.1",
   "description": "img blind watermark by frontend",
   "main": "lib/index.js",
   "scripts": {
@@ -39,6 +39,7 @@
     "worker-loader": "^3.0.8"
   },
   "dependencies": {
+    "dct2": "^0.1.1",
     "discrete-wavelets": "^5.0.7",
     "fast-png": "^5.0.4",
     "get-pixels": "^3.3.2",
