--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/polyfill": "^7.7.0",
     "blind-watermark": "^1.0.5",
     "dataloader": "^2.0.0",
+    "extended-hamming-code": "^1.0.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
